[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/calendar/CalendarUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/menu/Hunt.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/gui/EBGaramond-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/menu/SpinBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/menu/HuntDisplay.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/menu/Inventory.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 4 )

[node name="Hunt" type="Control"]
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 640, 360 )
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Back" type="Button" parent="."]
margin_right = 80.0
margin_bottom = 40.0
text = "Back"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 280.0
margin_right = 640.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 100.0
margin_right = 130.0
margin_bottom = 140.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 150.0
margin_top = 100.0
margin_right = 270.0
margin_bottom = 140.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Hunt" type="Button" parent="."]
margin_left = 10.0
margin_top = 60.0
margin_right = 130.0
margin_bottom = 120.0
text = "Daily Hunt"

[node name="PracticeHunt" type="Button" parent="."]
margin_left = 150.0
margin_top = 60.0
margin_right = 270.0
margin_bottom = 120.0
text = "Extra Hunts"

[node name="SpinBox" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = 120.0
margin_top = 70.0
margin_right = 250.0
margin_bottom = 130.0

[node name="Inventory" parent="." instance=ExtResource( 7 )]
margin_top = 0.0
margin_bottom = 40.0

[node name="CalendarUI" parent="." instance=ExtResource( 1 )]
margin_left = 280.0
margin_top = 40.0
margin_right = 280.0
margin_bottom = 40.0

[node name="HuntingTitle" type="Label" parent="."]
margin_left = 280.0
margin_right = 640.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "DAILY HUNT LOG"
align = 1
valign = 1

[node name="Instructions" type="Label" parent="."]
margin_left = 150.0
margin_top = 120.0
margin_right = 270.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
text = "Cost: 10 Arrows"
align = 1
valign = 1

[node name="Instructions2" type="Label" parent="."]
margin_left = 10.0
margin_top = 120.0
margin_right = 130.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
text = "Free"
align = 1
valign = 1

[node name="HuntDisplay" parent="." instance=ExtResource( 6 )]

[connection signal="button_up" from="Back" to="." method="_on_Back_button_up"]
[connection signal="pressed" from="Hunt" to="." method="_on_Hunt_pressed"]
[connection signal="pressed" from="PracticeHunt" to="." method="_on_PracticeHunt_pressed"]
[connection signal="date_selected" from="CalendarUI" to="." method="_on_CalendarUI_date_selected"]
